# citations-mcp

./: .env.example  .gitignore  APPS_UI_SUPPORT.md  NGROK_SETUP.md  QUICKSTART.md  README.md  cli.py  package.json  pyproject.toml  start_public.bat  start_public.sh  verify_setup.py
public/: find-citations.html  find-papers.html  list-papers.html
src/: config.py  main.py  mcp_server.py  pdf_processor.py  rag_engine.py  sse_transport.py
tests/: test_new_features.py  test_pdf_processor.py
