[project]
name = "research-citations-mcp"
version = "0.1.0"
description = "MCP server for searching and citing research papers using RAG"
authors = [{ name = "Sebastian Boehler" }]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "mcp>=1.1.2",
    "starlette>=0.41.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-chroma>=0.1.0",
    "pypdf>=5.1.0",
    "chromadb>=0.5.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.scripts]
citations-mcp = "cli:cli"
